# documind

./: .dockerignore  .env.example  .gitignore  README.md  config.py  db_setup.py  docker-compose.yml  pyproject.toml  schemas.py
generation/: chat_history.py  context_formatter.py  generate.py  llm_client.py  memory.py  prompt_templates.py  streamer.py
ingestion/: chunker.py  embedder.py  indexer.py  ingest.py  models.py  parser.py  schemas.py  store_setup.py
retrieval/: dense_retriever.py  parent_fetcher.py  reranker.py  retrieve.py  rrf.py  sparse_retriever.py
tests/test_generation/: test_prompt_templates.py
tests/test_ingestion/: test_chunker.py  test_embedder.py  test_indexer.py  test_parser.py
tests/test_retrieval/: test_dense_retrieval.py  test_parent_fetcher.py  test_reranker.py  test_retrieve.py
