[project]
name = "documind"
version = "0.1.0"
description = "Production RAG system for private document intelligence — hybrid retrieval, parent-child chunking, streaming answers with citations, and automated RAGAS evaluation CI/CD gate."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.13.1",
    "unstructured>=0.21.5",
]
